add winexrdp.drv dir to configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -3410,6 +3410,7 @@ WINE_CONFIG_DLL(wineps.drv,,[clean,po])
 WINE_CONFIG_DLL(wineps16.drv16,enable_win16)
 WINE_CONFIG_DLL(wineqtdecoder)
 WINE_CONFIG_DLL(winex11.drv)
+WINE_CONFIG_DLL(winexrdp.drv)
 WINE_CONFIG_DLL(wing.dll16,enable_win16)
 WINE_CONFIG_DLL(wing32)
 WINE_CONFIG_DLL(winhttp,,[clean,implib])
